<resources>
    <string name="app_name">Help Me</string>
    <string name="app_version">1.0.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="password_hint">Password should be minimum 8 characters</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="contacts">Contacts</string>
    <string name="nearbyme">Near By</string>
    <string name="whereami">Where Am I</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="help_title1">Police</string>
    <string name="help_title2">Ambulance</string>
    <string name="help_title3">Fire Station</string>
    <string name="help_title4">Hospital</string>

    <string name="help_value1">18001 101</string>
    <string name="help_value2">7921 5100</string>
    <string name="help_value3">020 8555 1200</string>
    <string name="help_value4">0207 377 7000</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>