<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_contact" />
        <item
            android:id="@+id/nav_nearbyme"
            android:icon="@drawable/ic_menu_accessibility"
            android:title="@string/nearbyme" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/sign_out" />
    </group>
</menu>